# cmdify

./: AGENTS.md  Cargo.toml  Makefile  NOTICE  README.md  RELEASE.md  config.example.toml  env.example
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
agent-docs/: BUILD.md  DESIGN.md  QUESTIONS.md  TOOLS.md
agent-docs/design/: BUILD.md  CRITIQUES.md  DESIGN.md  PROVIDERS.md  TOOLS.md
agent-docs/implementation/: DISCOVERY.md  PLAN.md  interactive-input.md  live-testing.md  phase-1-mvp.md  phase-10-ci-distribution.md  phase-10-interactive-setup.md  phase-10-safety-check.md  phase-11-debug-mode.md  phase-11-interactive-setup.md  phase-12-debug-mode.md  phase-13-release-improvements.md  phase-2-find-command.md  phase-3-ask-user.md  phase-4-openrouter-huggingface.md  phase-4-tool-levels.md  phase-5-gemini-openai-anthropic.md  phase-5-openrouter-huggingface.md  phase-5-review-fixes.md  phase-5-safety-check.md  (+13 more)
examples/: README.md  test-anthropic.sh  test-completions.sh  test-gemini.sh  test-huggingface.sh  test-kimi.sh  test-minimax.sh  test-mistral.sh  test-ollama.sh  test-openai.sh  test-openrouter.sh  test-qwen.sh  test-responses.sh  test-zai.sh
src/: app.rs  cli.rs  config.rs  debug.rs  error.rs  history.rs  lib.rs  logger.rs  main.rs  orchestrator.rs  prompt.rs  safety.rs  setup.rs  spinner.rs  system_prompt.txt  system_prompt_base.txt  system_prompt_safety.txt  system_prompt_tools.txt  system_prompt_unsafe.txt  throbber.rs
tests/: cli_test.rs  config_test.rs  orchestrator_test.rs  provider_test.rs  tools_test.rs
(+21 files in other folders)
