[package]
name = "cmdify"
version = "0.1.0"
edition = "2021"
description = "Turn natural language into shell commands with AI"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
