[package]
name = "cmdify"
version = "0.4.0"
edition = "2021"
description = "Turn natural language into shell commands with AI"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
chrono = "0.4"
toml = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
